[project]
name = "raster-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "anthropic>=0.72.0",
    "datashader>=0.18.2",
    "duckdb>=1.4.1",
    "geoviews>=1.14.1",
    "hvplot>=0.12.1",
    "ipyleaflet>=0.20.0",
    "leafmap>=0.57.2",
    "localtileserver>=0.10.6",
    "marimo>=0.17.7",
    "mcp>=1",
    "nbformat>=5.10.4",
    "openai>=2.7.1",
    "polars[pyarrow]>=1.35.2",
    "pydantic>=2",
    "pytest>=9.0.0",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.13.1",
    "rioxarray>=0.19.0",
    "ruff>=0.14.4",
    "setuptools>=80.9.0",
    "sqlglot>=27.29.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
    "websockets>=15.0.1",
]
